finishing the html
checking making sure I have everything before moving to css.

--- a/css/main.css
+++ b/css/main.css
@@ -33,5 +33,16 @@
 1.0 - Typography
 -------------------------------------------------------------- */
 
+/*--------------------------------------------------------------
+2.0 - Navigation Menus
+-------------------------------------------------------------- */
 
+nav ul li, header ul li {
+	display: inline-block;
+}
 
+/*--------------------------------------------------------------
+3.0 - Content
+-------------------------------------------------------------- */
+
+/*-- 3.1 Site Structure ----*/
