fixing from feedback
about half way done fixing the feedback before moving to the framework and the main css

--- a/css/main.css
+++ b/css/main.css
@@ -44,5 +44,8 @@ nav ul li, header ul li {
 /*--------------------------------------------------------------
 3.0 - Content
 -------------------------------------------------------------- */
+span{
+	display: none;
+}
 
 /*-- 3.1 Site Structure ----*/
