--- a/css/framework.css
+++ b/css/framework.css
@@ -46,7 +46,6 @@
 /*--------------------------------------------------------------
 5.0 - OBJECTS
 -------------------------------------------------------------- */
-/* -- FORMS -- */ 
 .wrapper{
 	width: 80%;
 	margin: 0 auto;
@@ -57,4 +56,32 @@
 	clear: both;
 }
 
+.float-left, [class*="col-1-4"], [class*="col-1-3"]{
+	float: left;
+}
 
+header ul, nav ul li, .float-right, #features .float-right{
+	float: right;
+}
+
+nav ul li {
+	padding:0 2px
+}
+[class*="col-1-4"]{
+	width: 25%;
+
+}
+ #services .col-1-3{
+	width: 40%;
+	padding: 5px;
+}
+#blog .col-1-3{
+	padding: 0 10px;
+	width: 33%
+}
+#about div section p{
+	width: 60%;
+}
+#features .float-right{
+	width: 40%;
+}
