--- a/css/framework.css
+++ b/css/framework.css
@@ -60,12 +60,12 @@
 	float: left;
 }
 
-header ul, nav ul li, .float-right, #features .float-right{
+header ul, nav ul li, .float-right, #features .float-right, #about .float-right{
 	float: right;
 }
 
 nav ul li {
-	padding:0 2px
+	padding:0 2px;
 }
 [class*="col-1-4"]{
 	width: 25%;
@@ -77,11 +77,24 @@ nav ul li {
 }
 #blog .col-1-3{
 	padding: 0 10px;
-	width: 33%
+	width: 33%;
 }
 #about div section p{
-	width: 60%;
+	width: 45%;
 }
 #features .float-right{
 	width: 40%;
+}
+#about img{
+	width: 300px;
+}
+#services img{
+	width: 200px;
+}
+#features img{
+	width: 300px;
+	padding-left: 20px;
+}
+#blog img{
+	width: 200px;
 }
