--- a/css/framework.css
+++ b/css/framework.css
@@ -36,7 +36,6 @@
 
 --------------------------------------------------------------*/
 *, *:after, *:before{
-	font-family: open sans, sans serif;
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing: border-box;
 	-o-box-sizing: border-box;
@@ -56,15 +55,19 @@
 	clear: both;
 }
 
+.img-responsive{
+	max-width: 100%;
+	display: block;
+	height: auto;
+}
 .float-left, [class*="col-1-4"], [class*="col-1-3"]{
 	float: left;
 }
 
-header ul, nav ul li, .float-right, #features .float-right, #about .float-right{
+header ul, nav ul, .float-right, #features .float-right, #about .float-right{
 	float: right;
 }
-
-nav ul li {
+nav ul{
 	padding:0 2px;
 }
 [class*="col-1-4"]{
